--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,8 +23,8 @@ $container-max-widths: (
 $bp-largest: 1200px;
 $bp-large: 1024px;
 $bp-medium: 992px;
-$bp-small: 37.5em;
-$bp-smallest: 31.25em;
+$bp-small: 768px;
+$bp-smallest: 558px;
 
 $font-secondary: 'Aileron', sans-serif;
 $font-primary: 'IvyMode', sans-serif;
