--- a/sass/_ingredients.scss
+++ b/sass/_ingredients.scss
@@ -70,6 +70,9 @@
     @media only screen and (max-width: $bp-medium) {
       background-image: linear-gradient($color-primary-light);
     }
+    @media only screen and (max-width: $bp-smallest) {
+      gap: 20px;
+    }
 
     .ingredients__feature {
       display: flex;
@@ -78,6 +81,14 @@
 
       .feature__icon {
         flex-shrink: 0;
+
+        @media only screen and (max-width: $bp-small) {
+          width: 96px;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+          width: 75px;
+        }
       }
 
       .feature__text {
@@ -98,6 +109,14 @@
           @media only screen and (max-width: $bp-medium) {
             font-size: 28px;
           }
+
+          @media only screen and (max-width: $bp-small) {
+            font-size: 32px;
+          }
+
+          @media only screen and (max-width: $bp-smallest) {
+            font-size: 24px;
+          }
         }
 
         .feature__desc {
@@ -111,6 +130,12 @@
           }
 
           @media only screen and (max-width: $bp-medium) {
+            font-size: 20px;
+          }
+          @media only screen and (max-width: $bp-small) {
+            font-size: 24px;
+          }
+          @media only screen and (max-width: $bp-smallest) {
             font-size: 20px;
           }
         }
@@ -180,6 +205,62 @@
       .feature__desc {
         font-size: 16px;
       }
+    }
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    &__left {
+      display: flex;
+      flex-direction: column;
+
+      height: max-content;
+
+      .ingredients__headline {
+        padding: 72px 40px 56px 40px;
+        font-size: 80px;
+        text-align: left;
+        position: relative;
+
+        width: 100%;
+        max-width: 650px;
+      }
+
+      .ingredients__image {
+        position: relative;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 800px;
+        top: unset;
+        left: unset;
+        order: 1;
+      }
+    }
+
+    &__right {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      padding: 32px 16px;
+
+      .ingredients__feature {
+        flex-direction: column;
+        align-items: start;
+        margin: 0 auto;
+
+        width: 100%;
+        max-width: 450px;
+      }
+    }
+  }
+
+  @media only screen and (max-width: $bp-smallest) {
+    .ingredients__headline {
+      font-size: 40px;
+    }
+
+    .ingredients__image {
+      width: 100%;
+      max-width: 375px;
     }
   }
 }
