--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -60,6 +60,11 @@ h6 {
   &:hover {
     background-color: $content-color-light-2;
   }
+
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 16px;
+    
+  }
 }
 
 .btns {
