--- a/sass/_allproduct.scss
+++ b/sass/_allproduct.scss
@@ -462,3 +462,107 @@
     }
   }
 }
+
+@media only screen and (max-width: $bp-smallest) {
+  .all-products {
+    padding: 64px 16px;
+
+    &__wrapper {
+      gap: 40px;
+      max-width: 1440px;
+      width: 100%;
+    }
+
+    &__left {
+      align-items: center;
+      gap: 48px;
+
+      width: 100%;
+      max-width: 532px;
+      height: 613px;
+    }
+
+    .headline-title {
+      font-size: 24px;
+      font-weight: 300;
+    }
+
+    .headline-subtitle {
+      font-size: 40px;
+      font-weight: 300;
+    }
+
+    .listing-categories {
+      gap: 12px;
+
+      &__row {
+        gap: 16px;
+        flex-wrap: wrap;
+      }
+    }
+
+    &__right {
+      align-items: center;
+      gap: 40px;
+
+      width: 100%;
+      max-width: 650px;
+      height: auto;
+    }
+
+    .product-row {
+      gap: 40px;
+    }
+
+    .product-card {
+      width: 100%;
+      max-width: 343px;
+      min-width: 343px;
+      height: fit-content;
+
+      margin: 0 auto;
+
+      border: 1px solid $color-primary;
+    }
+
+    .product__image {
+      width: 343px;
+      height: fit-content;
+    }
+
+    .product__desc {
+      padding: 24px;
+      gap: 10px;
+
+      width: 305px;
+      height: 161px;
+
+      border-top: 1px solid $color-primary;
+    }
+
+    .product__title {
+      font-size: 20px;
+    }
+
+    .product__price {
+      font-weight: 700;
+      font-size: 20px;
+    }
+
+    .rating2 {
+      display: flex;
+      flex-direction: row;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .ratings_number {
+      font-weight: 300;
+      font-size: 22px;
+    }
+
+    .shop-cta { 
+      align-self: flex-start ;
+    }
+  }
+}
