--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -96,6 +96,10 @@
       @media screen and (max-width: $bp-large) {
         font-size: 16px;
       }
+
+      @media screen and (max-width: $bp-small) {
+        font-size: 22px;
+      }
     }
   }
 
@@ -198,6 +202,11 @@
       width: 100%;
     }
 
+    @media screen and (max-width: $bp-smallest) {
+      gap: 35px;
+      padding: 32px 0;
+    }
+
     &--items-1 {
       font-size: 12px;
       padding-left: 133px;
@@ -248,6 +257,10 @@
       text-decoration: none;
       color: $color-primary-dark-3;
     }
+  }
+
+  &__designed {
+    font-size: 18px;
   }
 
   &__links {
