--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -29,6 +29,9 @@ h5 {
   font-size: 30px;
   line-height: 120%;
   color: $content-color-dark-2;
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 24px;
+  }
 }
 
 h6 {
@@ -63,7 +66,6 @@ h6 {
 
   @media only screen and (max-width: $bp-smallest) {
     font-size: 16px;
-    
   }
 }
 
@@ -82,6 +84,10 @@ h6 {
   border-radius: 40px;
 
   background-color: $content-color-light-1;
+
+  @media only screen and (max-width: $bp-smallest) {
+    padding: 12px 16px;
+  }
 }
 
 .active-btns {
@@ -99,4 +105,8 @@ h6 {
   border-radius: 40px;
 
   background-color: $color-primary-light;
+
+  @media only screen and (max-width: $bp-smallest) {
+    padding: 12px 16px;
+  }
 }
