--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
   font-weight: 400;
   background-color: #f2f6ef;
 }
+body a {
+  text-decoration: none;
+  color: inherit;
+}
 
 .container {
   margin: 0 auto;
@@ -124,6 +128,12 @@ body {
   .aboutus-company .asseenis__company {
     gap: 20px;
   }
+}
+.aboutus-company .asseenis__company .company--image {
+  transition: transform 0.3s ease;
+}
+.aboutus-company .asseenis__company .company--image:hover {
+  transform: translateY(-5px);
 }
 @media only screen and (max-width: 1200px) {
   .aboutus-company .asseenis__company .company--image {
@@ -289,6 +299,7 @@ body {
   color: #3c5e39;
 }
 .all-products .shop-cta {
+  position: relative;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -300,6 +311,12 @@ body {
   height: 52px;
   border: 1px solid #213721;
   text-decoration: none;
+  overflow: hidden;
+  z-index: 1;
+}
+.all-products .shop-cta * {
+  position: relative;
+  z-index: 2;
 }
 .all-products .shop-cta__text {
   color: #213721;
@@ -308,6 +325,26 @@ body {
 .all-products .shop-cta__icon {
   width: 30.11px;
   height: 18.47px;
+}
+.all-products .shop-cta::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  background-color: #c8d8c0;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
+  z-index: 0;
+}
+.all-products .shop-cta:hover::before, .all-products .shop-cta--active::before {
+  transform: scaleY(1);
+  width: 100%;
+}
+.all-products .shop-cta:active::before {
+  background-color: #e4ece0;
 }
 
 @media screen and (max-width: 1350px) {
@@ -614,6 +651,10 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  transition: transform 0.3s ease;
+}
+.cta__wrapper:hover {
+  transform: translateX(5px);
 }
 @media only screen and (max-width: 558px) {
   .cta__wrapper {
@@ -714,6 +755,10 @@ body {
   height: 52px;
   border: 1px solid #213721;
   text-decoration: none;
+  transition: all 0.3s ease;
+}
+.shop-cta:hover {
+  background-color: #e4ece0;
 }
 .shop-cta__text {
   color: #213721;
@@ -1105,6 +1150,10 @@ body {
   padding: 32px;
   gap: 24px;
   width: 480px;
+  transition: transform 0.3s ease;
+}
+.featured__products .product-card:hover {
+  transform: scale(0.95);
 }
 .featured__products .product-card__desc {
   display: flex;
@@ -1174,6 +1223,10 @@ body {
   border-width: 0px 1px;
   border-style: solid;
   border-color: #c8d8c0;
+  transition: transform 0.3s ease;
+}
+.featured__products .product-card-2:hover {
+  transform: scale(0.95);
 }
 @media only screen and (max-width: 992px) {
   .featured__products .product-card-2 {
@@ -1802,6 +1855,7 @@ body {
   .hero__content .hero__button {
     width: 100%;
     max-width: 192px;
+    height: 52px;
   }
 }
 .hero .slider {
@@ -2166,6 +2220,14 @@ body {
   }
 }
 
+.nav__checkbox {
+  display: none;
+}
+
+.nav__mobile {
+  display: none;
+}
+
 .nav__menu--1,
 .nav__menu--2 {
   display: flex;
@@ -2198,6 +2260,10 @@ body {
   .show-sm {
     display: inline-block;
   }
+  /* Sembunyikan checkbox */
+  .nav__checkbox {
+    display: none;
+  }
   .hamburger {
     display: inline-block;
     width: 32px;
@@ -2205,9 +2271,10 @@ body {
     position: relative;
     background-color: #f2f6ef;
     border-radius: 50%;
-    box-sizing: border-box;
     cursor: pointer;
     padding: 8px;
+    box-sizing: border-box;
+    z-index: 2000;
   }
   .hamburger::before,
   .hamburger::after {
@@ -2221,14 +2288,117 @@ body {
     transition: all 0.3s ease;
   }
   .hamburger::before {
-    top: 0;
-    transform: translateY(5px);
-    display: none;
+    top: 1px;
+    transform: translateY(9px);
   }
   .hamburger::after {
     top: 50%;
     transform: translateY(-50%);
     box-shadow: 0 -5px 0 0 #213721, 0 5px 0 0 #213721;
+  }
+  /* Ubah jadi X saat checkbox dicentang */
+  .nav__checkbox:checked + .hamburger {
+    background-color: #899f87;
+  }
+  .nav__checkbox:checked + .hamburger::before {
+    top: 50%;
+    transform: rotate(45deg);
+    box-shadow: none;
+    background-color: #f2f6ef;
+  }
+  .nav__checkbox:checked + .hamburger::after {
+    top: 50%;
+    transform: rotate(-45deg);
+    box-shadow: none;
+    background-color: #f2f6ef;
+  }
+}
+@media (max-width: 768px) {
+  .nav__mobile {
+    display: flex;
+    flex-direction: column;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #f2f6ef;
+    z-index: 1500;
+  }
+  .nav__mobile-logo {
+    padding: 16px 14px;
+    padding-right: 60px;
+    border-width: 1px 0px;
+    border-style: solid;
+    border-color: #c8d8c0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    z-index: 1000;
+  }
+  .nav__mobile-logo .nav-logo {
+    height: 44px;
+    width: 137px;
+  }
+  .nav__mobile .nav-mobile-item {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+  }
+  .nav__mobile .menu__items-logo {
+    text-transform: uppercase;
+    color: #899f87;
+  }
+  .nav__mobile-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+  .nav__mobile-list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    padding: 20px;
+  }
+  .nav__mobile-item {
+    list-style: none;
+  }
+  .nav__mobile-item a {
+    font-size: 40px;
+    text-decoration: none;
+    color: #213721;
+    font-family: "IvyMode", sans-serif;
+    font-weight: 300;
+  }
+  .nav__mobile-login {
+    margin-top: auto;
+    margin-bottom: 32px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 92%;
+    justify-content: center;
+    align-items: center;
+    margin-inline: auto;
+    gap: 10px;
+    height: 52px;
+    border: 1px solid #213721;
+    text-decoration: none;
+    z-index: 1;
+  }
+  .nav__mobile-login__text {
+    color: #213721;
+    line-height: 140%;
+  }
+  .nav__checkbox:checked ~ .nav__mobile {
+    display: flex;
+    opacity: 1;
+    pointer-events: all;
   }
 }
 .try-service {
@@ -2328,6 +2498,7 @@ body {
   }
 }
 .try-service__content .shop-cta {
+  position: relative;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -2339,9 +2510,32 @@ body {
   height: 52px;
   border: 1px solid #213721;
   text-decoration: none;
+  overflow: hidden;
+  z-index: 1;
 }
-.try-service__content .shop-cta__text {
-  color: #213721;
+.try-service__content .shop-cta * {
+  position: relative;
+  z-index: 2;
+}
+.try-service__content .shop-cta::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  background-color: #c8d8c0;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
+  z-index: 0;
+}
+.try-service__content .shop-cta:hover::before, .try-service__content .shop-cta--active::before {
+  transform: scaleY(1);
+  width: 100%;
+}
+.try-service__content .shop-cta:active::before {
+  background-color: #e4ece0;
 }
 
 h1 {
@@ -2428,6 +2622,10 @@ h6 {
   border: 1px solid #c8d8c0;
   border-radius: 40px;
   background-color: #f2f6ef;
+  transition: all 0.3s ease;
+}
+.btns:hover {
+  background-color: #e4ece0;
 }
 @media only screen and (max-width: 558px) {
   .btns {
@@ -2447,6 +2645,10 @@ h6 {
   border: 1px solid #c8d8c0;
   border-radius: 40px;
   background-color: #e4ece0;
+  transition: all 0.3s ease;
+}
+.active-btns:hover {
+  background-color: #c8d8c0;
 }
 @media only screen and (max-width: 558px) {
   .active-btns {
