--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -46,6 +46,11 @@ body {
     font-family: $font-secondary;   
     font-weight: 400;
     background-color: $content-color-light-1;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
 }
 
 .container {
