--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -147,6 +147,7 @@
       @media only screen and (max-width: $bp-smallest) {
         width: 100%;
         max-width: 192px;
+        height: 52px;
       }
     }
   }
