--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -85,6 +85,12 @@ h6 {
 
   background-color: $content-color-light-1;
 
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: $color-primary-light;
+  }
+
   @media only screen and (max-width: $bp-smallest) {
     padding: 12px 16px;
   }
@@ -105,6 +111,12 @@ h6 {
   border-radius: 40px;
 
   background-color: $color-primary-light;
+
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: $color-primary;
+  }
 
   @media only screen and (max-width: $bp-smallest) {
     padding: 12px 16px;
